# swim-coach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEFECTS.md  IDEAS.md  README.md  ROADMAP.md  cloudbuild.yaml
.github/workflows/: ci.yml  deploy-backend.yml  deploy.yml
athletes/andrew/: events.yaml  profile.yaml
athletes/renee/: events.yaml  profile.yaml
athletes/tim/: profile.yaml
backend/: .dockerignore  Dockerfile  README.md  requirements.txt
backend/app/: __init__.py  auth.py  claude.py  config.py  context.py  enrich.py  google_auth.py  logging_config.py  main.py  store_factory.py  sync.py  tools.py
design/channel-dragon-handoff/: App Icon.dc.html  Channel Dragon Prototype.dc.html  Channel Dragon Redesign.dc.html  README.md
docs/: design-self-service-onboarding.md
engine/: pyproject.toml
engine/swim_coach/: __init__.py  __main__.py  adapt.py  analytics.py  cli.py  library_review.py  load.py  models.py  parse_coach_text.py  parse_files.py  plan.py  provision.py  store.py  store_db.py  zones.py
scripts/: coach_smoke.py  export_plan_json.py  migrate_files_to_db.py  reanalyze_synced.py  validate_all.py
supabase/: README.md
supabase/migrations/: 20260706000000_init.sql  20260707000000_feedback.sql  20260714000000_identity.sql  20260722000000_onboarding_nullable_athlete.sql  20260723000000_onboarding_session_email.sql
tests/: store_contract.py
tests/api/: conftest.py  fakes.py  test_athlete_route.py  test_auth.py  test_auth_identity.py  test_chat.py  (+16 more)
web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
(+98 files in other folders)
