[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swim-coach-engine"
version = "0.1.0"
description = "Deterministic coaching engine for ultra-distance open-water swim training."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["swim_coach"]
