[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swim-coach-engine"
version = "0.1.0"
description = "Deterministic coaching engine for ultra-distance open-water swim training."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "fitdecode>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
# Postgres/Supabase backend for DbStore (store_db.py). Optional: the engine
# core, FileStore, and the CLI all import and run WITHOUT this. Only
# constructing a DbStore needs it. Install with `pip install swim-coach-engine[db]`.
db = [
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["swim_coach"]
